Added css class for code tag that does not work in blogger

--- a/css/my.css
+++ b/css/my.css
@@ -1,3 +1,5 @@
 .hl {color: #f155f1;}
 .hlb {color: #f155f1; font-weight: bold;}
 .hlbr {color:#e90001; font-weight: bold;}
+/* <code> tag does not work in blogger. Use following class with span tag */
+.code {color:#f20101; background: #f0f0f0; padding: 0.2em;}
