Many changes and a new post

--- a/css/my.css
+++ b/css/my.css
@@ -1,5 +1,14 @@
-.hl {color: #f155f1;}
-.hlb {color: #f155f1; font-weight: bold;}
+
+/* To highlight text in Green in pre tag */
+.hl {color: #008A00;}
+/* To highlight text in Bold Green in pre tag */
+.hlb {color: #008A00; font-weight: bold;}
+/* To highlight text in Bold Red in pre tag */
 .hlbr {color:#e90001; font-weight: bold;}
 /* <code> tag does not work in blogger. Use following class with span tag */
-.code {color:#f20101; background: #f0f0f0; padding: 0.2em;}
+.code {
+    color:#7e168d; 
+    background: #f0f0f0; 
+    padding: 0.1em 0.4em;
+    font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, Courier, monospace;
+}
